--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ body{
     background-image: url(wall.mp4);
     background-color: black;
     height: 200vh;
+    width: 100vw;
 }
 * {
   margin: 0;
@@ -51,12 +52,7 @@ body{
     margin-top: 0%;
     position: absolute;
     top:0%;
-    bottom:0%;
-    
-
-    
-
-}
+    bottom:0%;}
 
 
 
@@ -149,12 +145,73 @@ body{
               0 0 45px rgba(0, 255, 255, 0.6);
  
 }
-
-
-
-
 #Anime{
-  height: 100%;
-  width: 100%;
-  background-color: #000;
+  height: 100vh;
+  width: 100vw;
+  /* background-color: #000; */
+
+  color:white;
 }
+.screen2{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0,0.3);
+   
+   
+    z-index: -1;
+   
+    margin-top: 0%;
+    position: absolute;
+    top:100vh;
+    }
+.container{
+  /* background-color:rgba(0, 0, 0, 1); */
+  padding:5px;
+  height:90vh;
+  width:80vw;
+  display:flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-left:1vw;
+  position:relative;
+  
+  }
+  .DN img,.spy img,.ap img{
+    height:35vh;
+    
+
+  }
+  .HP img,.sk img,.bl img{
+    height:55vh;
+  }
+  img{
+    width:20vw;
+  }
+  .c1,.c2,.c3{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+  }
+  section>h3{
+    font-size: 3rem;
+    background:linear-gradient(90deg, rgba(24, 0, 24, 1), rgba(24, 0, 24, 0));
+    visibility:0.7;
+  }
+  .bar{
+    width:25vw;
+    position:absolute;
+    left: 70vw;
+    top:3vh;
+    text-align: center;
+    display: none;
+    font-size: 2.1rem;
+    background-color: rgba(24, 0, 24,0.5);
+   
+  }
+  img:hover + .bar{
+    display:block;
+    
+  }
+
+
+
